# SPDX-FileCopyrightText: 2020 Luke Granger-Brown
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "amongus"
version = "0.1.0"
description = "Network protocol for amongus"
authors = ["Luke Granger-Brown"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
scapy = "^2.4.4"
absl-py = "^0.10.0"

websockets = { version = "^8.1", optional = true }
ts3 = { version = "^2.0.0b3", optional = true }
"discord.py" = { version = "^1.4.1", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.3"
pre-commit = "^2.7.1"
reuse = "^0.11.1"

[tool.poetry.extras]
websocket = ["websockets"]
ts3 = ["ts3"]
discord = ["discord.py"]

[tool.isort]
known_first_party = ['amongus']
profile = 'google'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

